Tue Oct 17 03:55:44 CEST 2000  Marc Lehmann <pcg@goof.com>
	Applied patch by Robert L Krawitz <rlk@alum.mit.edu>.

        * gimp.m4: Don't barf if an old version of gimptool is used
        that doesn't support GIMP_DATA_DIR and GIMP_PLUGIN_DIR and
        Work correctly with versions of the Gimp that don't have the
        GIMP_CHECK_VERSION macro (if any).

Mon Oct 16 11:57:17 PDT 2000 Manish Singh <yosh@gimp.org>

	* Made 1.1.28 release (1.2pre)

Mon Oct 16 11:53:29 PDT 2000 Manish Singh <yosh@gimp.org>

	* Makefile.am: added docs/Wilber.svg to EXTRA_DIST

	* plug-ins/common/pnm.c: fix usage of %s in a CHECK_FOR_ERROR
	(can't do that with that macro)

2000-10-16  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpfeatures.h.in: added GIMP_HAVE_SYSCONFDIR

2000-10-16  Sven Neumann  <sven@gimp.org>

	* gimp.spec.in: make it work with my modifications of Ben's patch.

	* modules/cdisplay_gamma.c
	* modules/cdisplay_highcontrast.c: applied patch by Radim Kolar that
	initializes the interface of the configure dialogs correctly.

2000-10-15  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpwidgets.c: gimp_mem_size_entry_new(): fixed typo:
	s/4069/4096/ (reported by David Odin <David.Odin@bigfoot.com>)

2000-10-14  Sven Neumann  <sven@gimp.org>

	* Makefile.am
	* configure.in
	* gimp.1.in
	* gimp.spec.in
	* gimprc.5.in
	* user_install
	* user_install.bat
	* app/gimprc.c
	* app/user_install.c
	* libgimp/Makefile.am
	* libgimp/gimpenv.[ch]: applied a modified version of 
	gimp-che-20001013-2, a patch from Ben Gertzfield <che@debian.org> 
	that moves the system-dependant configuration files (gimprc and 
	friends) into $prefix/etc/gimp/1.1.
	
2000-10-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/Makefile.am
	* plug-ins/print/README
	* plug-ins/print/gimp_main_window.c
	* plug-ins/print/print-canon.c
	* plug-ins/print/print-escp2.c
	* plug-ins/print/print-pcl.c
	* plug-ins/print/print-printers.c
	* plug-ins/print/print-util.c